--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,105 @@
-.App {
-  text-align: center;
+
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700");
+
+* {
+  margin: 0;
+  border: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  --font-roboto: "Roboto Slab", serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  font-family: var(--font-roboto);
+  background-color: #212426;
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
+  padding: 4rem;
+
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-direction: column;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  font-size: 3rem;
+  letter-spacing: 0.9px;
+  color:bisque;
+  width: fit-content;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.search {
+  width: 70%;
+  height: 3rem;
+  margin: 4rem 0 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1.5rem 1.75rem;
+  border-radius: 3rem;
+  background-color:  #16191b;
+  -webkit-box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
+  box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
+}
+
+.search input {
+  width: 80%;
+  height: 3rem;
+  flex: 1;
+  border: none;
+  font-size: 1.5rem;
+  outline: none;
+  color: bisque;
+  background: #16191b;
+  font-family: var(--font-roboto);
+  padding-right: 1rem;
+}
+
+.search img {
+  width: 35px;
+  height: 35px;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 600px) {
+  .app {
+    padding: 4rem 2rem;
   }
-  to {
-    transform: rotate(360deg);
+
+  .search {
+    padding: 1rem 1.75rem;
+    width: 100%;
+  }
+
+  .search input {
+    font-size: 1rem;
+  }
+
+  .search img {
+    width: 20px;
+    height: 20px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .app {
+    padding: 4rem 1rem;
+  }
+
+  .search {
+    width: 100%;
+    border-radius: 3rem;
+  }
+  .search input {
+    border-radius: 3rem;
+  }
+
+  h1 {
+    font-size: 2rem;
   }
 }
